Finished the table

--- a/benchmarks/benchmark1.ipynb
+++ b/benchmarks/benchmark1.ipynb
@@ -271,23 +271,17 @@
    "metadata": {},
    "source": [
     "\n",
-    "<td> $\\epsilon_{\\text{sphere}}$ </td>\n",
-    "<td> 0.05 </td>\n",
-    "</tr>\n",
-    "<tr>\n",
-    "<td> $c_0$ </td>\n",
-    "<td> 0.5 </td>\n",
-    "</tr>\n",
-    "</table>\n",
     "\n",
-    "| Symbol     | Parameter   |\n",
+    "| Parameter     | Value   |\n",
     "| ----------- | ----------- |\n",
     "| $c_{\\alpha}$ | 0.3       |\n",
     "| $c_{\\beta}$   | 0.7        |\n",
     "| $\\varrho_{s}$ | 5 |\n",
     "| $\\kappa$ | 2 | \n",
     "| $M$ | 5 |\n",
-    "| $\\epsilon$ | 0.01 | "
+    "| $\\epsilon$ | 0.01 | \n",
+    "| $\\epsilon_{\\text{sphere}}$ | 0.05 |\n",
+    "| $c_0$ |  0.5 |"
    ]
   },
   {
